@@ -5,18 +5,12 @@ AUX bsnes-phoenix-0.075-makefile.patch 1307 RMD160 865ae111b6b3ec1a150680ce34ab0
 AUX bsnes-phoenix-0.075-toolkit.patch 951 RMD160 1344f0cf796a469e60be4f1f425eb3b2566af53a SHA1 b209199155e778c6b994da62b5c40455fa981f42 SHA256 376d337b4a5dc8d8084f7bf7692cc6006a10d05bd3219ce6875e32e674e69def
 AUX bsnes-phoenix-0.076-toolkit.patch 953 RMD160 f981d79dafd7b3e78164bcfc49fd34fc8655c18a SHA1 0725335c69c2102c341a5da085baea3a0ca6faa4 SHA256 41fe91939982de70216673d85ad11842cca29110bc813ff66fa6b6cf82522019
 AUX bsnes-phoenix-0.077-makefile.patch 1369 RMD160 5c05c6f132c0c77e1206d0e96ee26c9a4aea2e9e SHA1 61c7e0e2c3823b5880f306a54dfcd2a214bee882 SHA256 75fdf7f9ee03e6adaeff0f5e80c302d7e5b6c99cf6c97265a6f39f892c2df4a4
-DIST bsnes_v073.tar.bz2 874627 RMD160 1f93da56929fcb70cf94f1dfd470e2b321da4f86 SHA1 eb49a8fbec684eedf32a340a712b578824e60587 SHA256 6a5c2706ef1d12d97705bbfad7e3a27b5ac04ef8a6c78548b327ea3a91850056
-DIST bsnes_v074.tar.bz2 597923 RMD160 ee40474f0f101c60152c3c4470f4324dc97faeda SHA1 ad375fca2e7238fe5eaee75f6f4aa4f35cf6336c SHA256 3d0fea4a326bbdbefcb09420839e0ff4dab22c16e68e6e8b3e3af782e6af7425
-DIST bsnes_v074r11.tar.bz2 489575 RMD160 54faff2e07972cadf9a560b8649447bcaf215266 SHA1 415f9e005d282b3bd0dde14c1738b948f378c07f SHA256 7915c25de16ceffb72847dd8c43b4eb26981a75fb95e7b4e621dcce5e8b43758
 DIST bsnes_v075-source.tar.bz2 588228 RMD160 23d2379291831d247d0247077f0b24fb55805882 SHA1 cb9ac27c5c7d1db2f2a7014eb69c402c4287ca1a SHA256 4ce3f4591865d2e460749119744fff70836c927b18202e50d4d3855dd6f3c05c
 DIST bsnes_v076-source.tar.bz2 628918 RMD160 aa38d58a7b178736a68f859fa1fa3e59ad038c36 SHA1 2b0de3913392b8b4cd90ed8a92e7ea8b91d8a165 SHA256 1d7b7f1fd6e840150d4dc617bd834ed5343af4a60e26bc72aa587347f45c6d65
 DIST bsnes_v077-source.tar.bz2 626689 RMD160 45beb2be9f27dce27ff8e6c0a57533bad1ff107f SHA1 f126ae565ffb2a6de00688bdbf83b36abae53a1f SHA256 7cdbde2bf3f9298bba16f185a071ff667e10e48523f77c1cda5f404b86188cfe
-EBUILD bsnes-phoenix-0.073.ebuild 1834 RMD160 f6ebfecb540eb92acd04474397866bec56b50bb3 SHA1 57508cec5f4250f5e34f24d79d04caef48e9339e SHA256 c3229f04d7538e58fd96f8c1b092a87986e846042b89c1da95222dedfb200eb6
-EBUILD bsnes-phoenix-0.074.ebuild 2180 RMD160 f369d084552f80f84c67ac53bee790b5cce9a8d5 SHA1 15bee3b9ef6d79142cd298a078b0e58181f3eef1 SHA256 e9fb7fd9aa4b6980b14fa0e26e10dc5dc82533fec0376ac79bf7e2dd506ac307
-EBUILD bsnes-phoenix-0.074_p11.ebuild 2173 RMD160 65764d4a4821ee85379ab9218c7754257cf447e4 SHA1 af2c542aebf21d1ff4ea8b2637b0a1c0ecfea7a4 SHA256 9d1bcd88893c07f4314799063d1708c8a9a67c88ad9bbdb1f4b141fa5fa1aa7d
 EBUILD bsnes-phoenix-0.075-r1.ebuild 2510 RMD160 d6bd7acf995c3dfa1e4d3cb1e1a6673bcf6470ec SHA1 6cbef12cacee5d9a40902b4ceca122b92bda9d4a SHA256 c7a0a3ece5938064b5a5ba3d135cfa5685c348f48dcc8b2b9d2c2acf4e9388e9
 EBUILD bsnes-phoenix-0.075.ebuild 2194 RMD160 ed26704fee151d9aea79499b0b161d0a97547b1e SHA1 22fff87f1aa991b2b795f4009bbb991a599cdafc SHA256 2b8c94464d847ff79b42eed246b2253ce995d2de846b5392eba8c1c1232f23ba
 EBUILD bsnes-phoenix-0.076.ebuild 2510 RMD160 f81438d24835b2292711c6350a06ce6a219e0f5f SHA1 b64bd27689bdeaee993d8fe770cbd4ea35096e66 SHA256 d78441b632620688358bf1423d02b5e4186637fe13e3dec9d5d2c579a597dddc
 EBUILD bsnes-phoenix-0.077.ebuild 2523 RMD160 827e4ab70d7a4ba8cb0e4d539f61c0b1ec8643ec SHA1 bbc72fa087eb75707190f1270e3250ac9bbce07f SHA256 224830821b2fa5735ed9c467504710b3abd47118621720a78da0fb7ccfa147c6
-MISC ChangeLog 2052 RMD160 507968a2a05f8b2b8e59af7db860efcee771aced SHA1 82a501cd11308c281b9908cb3a483d176515ae57 SHA256 df68f7c2b153d2f588cda1faabe076cd8aeafc214ab7885474f1591cfd2cdd1c
+MISC ChangeLog 2212 RMD160 3ac29b735a10b8287af809eea1509fd00cecf015 SHA1 652b8a428d53c9a5f6f2ba37115faec470ea9874 SHA256 52f0d0b31e8c4e6255ed415d81003c3c3ddc4a06ee7b96d00c7a287405a91f82
 MISC metadata.xml 558 RMD160 64d6289cdbef90cff30b1f6ec8895842e9c56700 SHA1 0c569c5160067bd2c587be3f456fe85a3898a07d SHA256 9e20506bb01b8bbef63e5afdba0f7b5401efa0f91bdef2299881c984cc64d640
